temp fix hide info button bug (z-index disabled in fadeIn/Out)

--- a/style.css
+++ b/style.css
@@ -723,7 +723,7 @@ button:disabled:hover {
 
 .fadeIn {
     /* DISABLE WITH Z INDEX */
-    z-index: 1;
+    /* z-index: 1; */
     animation: fadeIn 2s linear;
     /* FADE IN AND STAY SO */
     animation-fill-mode: forwards;
@@ -731,7 +731,7 @@ button:disabled:hover {
 
 .fadeOut {
     /* DISABLE WITH Z INDEX */
-    z-index: -1;
+    /* z-index: -1; */
     animation: fadeOut 2s linear;
     /* FADE OUT AND STAY SO */
     animation-fill-mode: forwards;
